# mpi-image-convolution

./: .gitignore  CMakeLists.txt  README.md
doc/: Makefile  doc.tex
src/app/: cmd.c  cmd.h  comm.c  comm.h  convolution.c  convolution.h  main.c  serial_main.c  timer.h
src/lib/types/: image.c  image.h  matrix.c  matrix.h
src/lib/util/: log.c  log.h
src/tests/: convolution.c  mpi.c  types.c
